adds more yaml documentation
